updated input form

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
             font-weight: 500;
         }
 
+        .security-info {
+            background: rgba(59, 130, 246, 0.1);
+            border: 1px solid rgba(59, 130, 246, 0.2);
+            padding: 12px 16px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            font-size: 14px;
+            color: #1e40af;
+        }
+
+        .rate-limit-warning {
+            background-color: #fef3c7;
+            border: 2px solid #fbbf24;
+            color: #92400e;
+        }
+
         input[type="text"]:focus {
             outline: none;
             border-color: #3b82f6;
@@ -230,21 +246,31 @@
 <div class="container">
     <h1>Enter 3 competitors</h1>
 
-    <form id="competitorForm">
+    <div class="security-info">
+        🔒 This form uses security measures including input validation, rate limiting, and sanitization.
+    </div>
+
+    <form id="competitorForm">'
         <div class="competitors-grid">
             <div class="input-group">
                 <label for="competitor1">Competitor 1</label>
-                <input type="text" id="competitor1" name="competitor1">
+                <input type="text" id="competitor1" name="competitor1" maxlength="25"
+                       pattern="^[a-zA-Z0-9\s\-\.\_]+$"
+                       title="Only letters, numbers, spaces, hyphens, dots and underscores allowed">
             </div>
 
             <div class="input-group">
                 <label for="competitor2">Competitor 2</label>
-                <input type="text" id="competitor2" name="competitor2">
+                <input type="text" id="competitor2" name="competitor2" maxlength="25"
+                       pattern="^[a-zA-Z0-9\s\-\.\_]+$"
+                       title="Only letters, numbers, spaces, hyphens, dots and underscores allowed">
             </div>
 
             <div class="input-group">
                 <label for="competitor3">Competitor 3</label>
-                <input type="text" id="competitor3" name="competitor3">
+                <input type="text" id="competitor3" name="competitor3" maxlength="25"
+                       pattern="^[a-zA-Z0-9\s\-\.\_]+$"
+                       title="Only letters, numbers, spaces, hyphens, dots and underscores allowed">
             </div>
         </div>
 
@@ -280,16 +306,98 @@
 </div>
 
 <script>
+    // Security configuration
+    const SECURITY_CONFIG = {
+        MAX_REQUESTS_PER_HOUR: 10,
+        ALLOWED_CHARS_REGEX: /^[a-zA-Z0-9\s\-\.\_]+$/,
+        MIN_REQUEST_INTERVAL: 5000, // 5 seconds between requests
+        SESSION_TOKEN: null
+    };
+
+    // Generate session token for CSRF protection
+    function generateSessionToken() {
+        return 'session_' + Math.random().toString(36).substr(2, 9) + '_' + Date.now();
+    }
+
+    // Initialize session token
+    SECURITY_CONFIG.SESSION_TOKEN = generateSessionToken();
+
+    // Rate limiting functionality
+    function checkRateLimit() {
+        const now = Date.now();
+        const requests = JSON.parse(sessionStorage.getItem('requests') || '[]');
+
+        // Remove requests older than 1 hour
+        const recentRequests = requests.filter(time => now - time < 3600000);
+
+        if (recentRequests.length >= SECURITY_CONFIG.MAX_REQUESTS_PER_HOUR) {
+            return false;
+        }
+
+        // Check minimum interval between requests
+        if (recentRequests.length > 0) {
+            const lastRequest = Math.max(...recentRequests);
+            if (now - lastRequest < SECURITY_CONFIG.MIN_REQUEST_INTERVAL) {
+                return false;
+            }
+        }
+
+        // Add current request
+        recentRequests.push(now);
+        sessionStorage.setItem('requests', JSON.stringify(recentRequests));
+        return true;
+    }
+
+    // Input sanitization
+    function sanitizeInput(input) {
+        if (typeof input !== 'string') return '';
+
+        // Remove any HTML/script tags
+        input = input.replace(/<[^>]*>?/gm, '');
+
+        // Remove potentially dangerous characters
+        input = input.replace(/[<>\"'&]/g, '');
+
+        // Trim whitespace
+        input = input.trim();
+
+        // Check against allowed characters
+        if (!SECURITY_CONFIG.ALLOWED_CHARS_REGEX.test(input)) {
+            return '';
+        }
+
+        return input;
+    }
+
+    // Validate competitor name
+    function validateCompetitorName(name) {
+        if (!name || name.length === 0) return true; // Empty is allowed
+        if (name.length > 25) return false;
+        if (!SECURITY_CONFIG.ALLOWED_CHARS_REGEX.test(name)) return false;
+
+        // Additional security checks
+        if (name.includes('..') || name.includes('//')) return false; // Path traversal prevention
+        if (/^\s+$/.test(name)) return false; // Only whitespace
+
+        return true;
+    }
+
     function runAnalysis() {
         console.log('Run analysis clicked');
         hideMessages();
 
-        // Get competitor values
-        const competitor1 = document.getElementById('competitor1').value.trim();
-        const competitor2 = document.getElementById('competitor2').value.trim();
-        const competitor3 = document.getElementById('competitor3').value.trim();
+        // Rate limiting check
+        if (!checkRateLimit()) {
+            showError('Rate limit exceeded. Please wait before making another request.', 'rate-limit-warning');
+            return;
+        }
 
-        console.log('Values:', competitor1, competitor2, competitor3);
+        // Get competitor values and sanitize
+        let competitor1 = sanitizeInput(document.getElementById('competitor1').value);
+        let competitor2 = sanitizeInput(document.getElementById('competitor2').value);
+        let competitor3 = sanitizeInput(document.getElementById('competitor3').value);
+
+        console.log('Sanitized values:', competitor1, competitor2, competitor3);
 
         // Validation - at least one competitor required
         if (!competitor1 && !competitor2 && !competitor3) {
@@ -298,64 +406,126 @@
             return;
         }
 
+        // Validate each competitor name
+        if ((competitor1 && !validateCompetitorName(competitor1)) ||
+            (competitor2 && !validateCompetitorName(competitor2)) ||
+            (competitor3 && !validateCompetitorName(competitor3))) {
+            showError('Invalid competitor name. Only letters, numbers, spaces, hyphens, dots and underscores are allowed.');
+            return;
+        }
+
         // Collect only non-empty competitors
         const competitors = [competitor1, competitor2, competitor3].filter(c => c !== '');
 
-        // Check for duplicates among entered competitors
+        // Check for competitor name length (max 25 characters)
+        const tooLongCompetitors = competitors.filter(c => c.length > 25);
+        if (tooLongCompetitors.length > 0) {
+            showError('Competitor names must be 25 characters or less');
+            return;
+        }
+
+        // Check for duplicates among entered competitors (case-insensitive)
         const uniqueCompetitors = [...new Set(competitors.map(c => c.toLowerCase()))];
         if (uniqueCompetitors.length !== competitors.length) {
             showError('Please enter different competitors (no duplicates)');
             return;
         }
 
-        // Collect form data
+        // Validate dropdown selections
+        const country = document.getElementById('country').value;
+        const status = document.getElementById('status').value;
+
+        const allowedCountries = ['UA', 'PL', 'DE', 'US', 'GB'];
+        const allowedStatuses = ['active', 'inactive'];
+
+        if (!allowedCountries.includes(country) || !allowedStatuses.includes(status)) {
+            showError('Invalid selection detected');
+            return;
+        }
+
+        // Collect form data with security headers
         const formData = {
             competitors: competitors,
-            country: document.getElementById('country').value,
-            status: document.getElementById('status').value
+            country: country,
+            status: status,
+            sessionToken: SECURITY_CONFIG.SESSION_TOKEN,
+            timestamp: Date.now(),
+            userAgent: navigator.userAgent.substr(0, 100) // Limit length
         };
 
-        console.log('Data to send:', formData);
+        console.log('Secure data to send:', {
+            competitors: formData.competitors,
+            country: formData.country,
+            status: formData.status,
+            hasToken: !!formData.sessionToken
+        });
 
-        // Replace with your actual n8n webhook URL
+        // Replace with your actual webhook URL
         const webhookUrl = 'YOUR_N8N_WEBHOOK_URL_HERE';
 
         // For testing purposes, just show success without actually sending
         if (webhookUrl === 'YOUR_N8N_WEBHOOK_URL_HERE') {
-            showSuccess('Ready to send data to n8n webhook. Please replace YOUR_N8N_WEBHOOK_URL_HERE with your actual webhook URL.');
+            showSuccess('✅ Security validation passed. Ready to send data to webhook. Please replace YOUR_N8N_WEBHOOK_URL_HERE with your actual webhook URL.');
             return;
         }
 
-        // Send to webhook
+        // Disable submit button to prevent double submission
+        const submitBtn = document.querySelector('.btn-primary');
+        const originalText = submitBtn.textContent;
+        submitBtn.disabled = true;
+        submitBtn.textContent = 'Processing...';
+
+        // Send to webhook with timeout
+        const controller = new AbortController();
+        const timeoutId = setTimeout(() => controller.abort(), 30000); // 30 second timeout
+
         fetch(webhookUrl, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
+                'X-Requested-With': 'XMLHttpRequest',
+                'X-Session-Token': SECURITY_CONFIG.SESSION_TOKEN
             },
-            body: JSON.stringify(formData)
+            body: JSON.stringify(formData),
+            signal: controller.signal
         })
         .then(response => {
+            clearTimeout(timeoutId);
             if (response.ok) {
                 showSuccess('Analysis started successfully!');
+                // Generate new token for next request
+                SECURITY_CONFIG.SESSION_TOKEN = generateSessionToken();
             } else {
                 showError('Error starting analysis');
             }
         })
         .catch(error => {
+            clearTimeout(timeoutId);
             console.error('Error:', error);
-            showError('Error connecting to webhook');
+            if (error.name === 'AbortError') {
+                showError('Request timeout. Please try again.');
+            } else {
+                showError('Error connecting to webhook');
+            }
+        })
+        .finally(() => {
+            // Re-enable submit button
+            submitBtn.disabled = false;
+            submitBtn.textContent = originalText;
         });
     }
 
     function resetForm() {
         document.getElementById('competitorForm').reset();
         hideMessages();
+        // Don't reset rate limiting on form reset
     }
 
-    function showError(message) {
+    function showError(message, className = 'error-message') {
         const errorDiv = document.getElementById('errorMessage');
         const successDiv = document.getElementById('successMessage');
         errorDiv.textContent = message;
+        errorDiv.className = `message ${className}`;
         errorDiv.style.display = 'block';
         successDiv.style.display = 'none';
     }
@@ -373,15 +543,48 @@
         document.getElementById('successMessage').style.display = 'none';
     }
 
+    // Security event listeners
     document.addEventListener('DOMContentLoaded', function() {
-        console.log('Page loaded, setting up form listener');
+        console.log('Page loaded with security features enabled');
 
+        // Prevent form submission via Enter key to force validation
         document.getElementById('competitorForm').addEventListener('submit', function(e) {
             console.log('Form submit triggered');
             e.preventDefault();
             runAnalysis();
         });
+
+        // Real-time input validation
+        ['competitor1', 'competitor2', 'competitor3'].forEach(id => {
+            const input = document.getElementById(id);
+            input.addEventListener('input', function() {
+                const value = this.value;
+                if (value && !SECURITY_CONFIG.ALLOWED_CHARS_REGEX.test(value)) {
+                    this.style.borderColor = '#ef4444';
+                    this.title = 'Invalid characters detected';
+                } else {
+                    this.style.borderColor = '#e2e8f0';
+                    this.title = 'Only letters, numbers, spaces, hyphens, dots and underscores allowed';
+                }
+            });
+        });
+
+        // Prevent right-click context menu on form (optional security measure)
+        document.getElementById('competitorForm').addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+
+        // Clear sensitive data on page unload
+        window.addEventListener('beforeunload', function() {
+            // Clear any sensitive data if needed
+            SECURITY_CONFIG.SESSION_TOKEN = null;
+        });
     });
+
+    // Additional security: Detect if form is being automated
+    let humanInteraction = false;
+    document.addEventListener('mousemove', () => humanInteraction = true, { once: true });
+    document.addEventListener('keydown', () => humanInteraction = true, { once: true });
 </script>
 </body>
 </html>
