--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="rateLimitCounter" class="rate-limit-counter">
-        <span>⏱️ Requests remaining this hour: <strong id="requestsRemaining">20</strong>/20</span>
+        <span>⏱️ Requests remaining this hour: <strong id="requestsRemaining">10</strong>/10</span>
         <span id="cooldownTimer"></span>
     </div>
 
@@ -74,6 +74,6 @@
     </form>
 </div>
 
-<script src="script.js"></script>
+<script type="module" src="js/index.js"></script>
 </body>
 </html>
