dropped country codes

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
                 <select id="country" name="country">
                     <option value="UA">UA</option>
                     <option value="PL">PL</option>
-                    <option value="DE">DE</option>
-                    <option value="US">US</option>
-                    <option value="GB">GB</option>
+                    <option value="CZ">CZ</option>
+                    <option value="SK">SK</option>
                 </select>
             </div>
 
